--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,10 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  background-color: black;
 }
 h1 {
-  color: #333;
+  color: #f5efef;
 }
 
 input[type="text"], input[type="number"] {
@@ -35,7 +36,7 @@ button:hover {
 }
 
 .caption {
-  background: rgba(0, 0, 0, 0.7);
+  /* background: rgba(0, 0, 0, 0.7); */
   color: white;
   padding: 10px;
   border-radius: 5px;
@@ -45,9 +46,14 @@ button:hover {
   text-align: center;
   font-size: 18px;
 }
-
+.caption-title{
+  margin-top: 20px;
+}
 .captions-list {
   margin-top: 20px;
+}
+.captions-list h2{
+  color: #f5efef;
 }
 
 .captions-list ul {
@@ -56,7 +62,7 @@ button:hover {
 }
 
 .captions-list li {
-  background: #007bff;
+  /* background: #2ac55d; */
   color: white;
   padding: 10px;
   margin: 5px 0;
